dependencies: bump next-mdx-remote from 3.0.8 to 4.0.0

--- a/posts/next-blog.mdx
+++ b/posts/next-blog.mdx
@@ -13,12 +13,12 @@ Next.JS로 제작한 MDX 블로그
 
 ### 사용한 기술 스택
 
-Next.JS, AWS Amplify
+Next.JS
 
 ## 프로젝트 스크린샷
 
 ### 메인 화면
 
-<img src="https://user-images.githubusercontent.com/26790365/156870889-d2bb48ea-6c75-4a61-8a50-bd6cdb3c0b61.png">
+<ImageDescription src="https://user-images.githubusercontent.com/26790365/156870889-d2bb48ea-6c75-4a61-8a50-bd6cdb3c0b61.png">
   현재 올라와 있는 포스트들의 썸네일, 제목, 설명, 작성시간이 보여집니다.
-</img>
+</ImageDescription>
