--- a/posts/daesun.mdx
+++ b/posts/daesun.mdx
@@ -3,34 +3,37 @@ title: Daesun
 description: 2022 소프트웨어 스튜디오 2 프로젝트
 date: '2021-12-30'
 image: 'https://user-images.githubusercontent.com/26790365/156141867-d0c3a4fd-8d54-4846-9db2-4f447a9e1237.png'
+originalLink: 'https://github.com/Julrum/ITE3068_team8'
 ---
-
-2022 소프트웨어 스튜디오 2 프로젝트
 
 ## 프로젝트 소개
 
-대선이 얼마 안남은 시점에 대선 관련 뉴스 및 정보를 한 곳에서 모아 보여주면 좋겠다는 생각에 시작한 프로젝트입니다.
+대선 관련 뉴스 및 정보를 한 곳에서 모아 보여주면 좋겠다는 생각에 시작한 프로젝트입니다.
 선거 일정 및 선거 정보, 후보 정보, 선거 뉴스, 여론 조사 정보가 제공이 됩니다.
 선거 뉴스의 경우 네이버 뉴스 API를 이용하여 가져오며 후보자별 필터링 기능이 제공됩니다.
-또한 로그인 기능을 통해 마음에 드는 기사를 북마크하여 한 곳에 모아볼 수 있게 만들었습니다.
+또한 로그인을 하면 마음에 드는 기사를 북마크하여 한 곳에 모아볼 수 있게 만들었습니다.
 
 ### 사용한 기술 스택
 
-ReactJS, AWS Amplify, GraphQL
+- ReactJS
+- AWS Amplify
+- GraphQL
 
 ## 프로젝트 스크린샷
 
 ### 메인 화면
 
 <ImageDescription src="https://user-images.githubusercontent.com/26790365/156141867-d0c3a4fd-8d54-4846-9db2-4f447a9e1237.png">
-  대선까지 남은 기간이 표시가 되며 운영자가 선정한 오늘의 뉴스가 나옵니다.
-  아래에는 선거의 주요 일정을 순서대로 나타내었습니다.
+  헤더에는 홈화면, 선거정보, 후보정보, 뉴스, 여론조사 페이지로 갈 수 있는 버튼이
+  있으며 우측에는 로그인과 회원가입을 할 수 있는 버튼이 존재합니다. 대선까지
+  남은 기간이 표시가 되며 운영자가 선정한 오늘의 뉴스가 나옵니다. 아래에는
+  선거의 주요 일정을 순서대로 나타내었습니다.
 </ImageDescription>
 
 #### 로그인 모달
 
 <ImageDescription src="https://user-images.githubusercontent.com/26790365/156141944-7e389561-7b23-46eb-9c93-c4d3a6b3568a.png">
-  직접 제작한 모달 컴포넌트에 AWS SignIn API를 연결하여 로그인을 지원합니다.
+  직접 제작한 모달 컴포넌트에 AWS Sign-In API를 연결하여 로그인을 지원합니다.
   모달 바깥을 클릭하여 모달을 닫을 수 있습니다.
 </ImageDescription>
 
