enhancement: Add contents on Nextblog post

--- a/posts/next-blog.mdx
+++ b/posts/next-blog.mdx
@@ -22,3 +22,15 @@ Next.JS
 <ImageDescription src="https://user-images.githubusercontent.com/26790365/156870889-d2bb48ea-6c75-4a61-8a50-bd6cdb3c0b61.png">
   현재 올라와 있는 포스트들의 썸네일, 제목, 설명, 작성시간이 보여집니다.
 </ImageDescription>
+
+### 포스트 페이지
+
+<ImageDescription src="https://user-images.githubusercontent.com/26790365/169682884-f30f3f2a-a679-4683-9eba-022a0c31e583.png">
+  포스트의 제목, 설명, 작성날짜 등이 헤더에 알맞게 파싱되어 나타납니다.
+</ImageDescription>
+
+### 자기소개 페이지
+
+<ImageDescription src="https://user-images.githubusercontent.com/26790365/169682913-69f6cf86-1877-4f78-afda-1d41f82f0a55.png">
+  커스텀 컴포넌트를 이용하여 데이터들을 보여줍니다.
+</ImageDescription>
