--- a/posts/daesun.mdx
+++ b/posts/daesun.mdx
@@ -74,8 +74,10 @@ originalLink: 'https://github.com/Julrum/ITE3068_team8'
 
 ### 선거정보 페이지
 
-<ImageDescription src="https://user-images.githubusercontent.com/26790365/156144470-d4fee0f2-14b1-47b4-872e-a80d2231e917.png"
-alt=Election inform page">
+<ImageDescription
+  src="https://user-images.githubusercontent.com/26790365/156144470-d4fee0f2-14b1-47b4-872e-a80d2231e917.png"
+  alt="Election inform page"
+>
   이번 대선에 대한 소개 글과 참고하면 좋을 자료를 보여줍니다.
 </ImageDescription>
 
