enhancement: Change image png to webp

--- a/posts/daesun.mdx
+++ b/posts/daesun.mdx
@@ -2,7 +2,7 @@
 title: Daesun
 description: 2022 소프트웨어 스튜디오 2 프로젝트
 date: '2021-12-30'
-image: 'https://user-images.githubusercontent.com/26790365/156141867-d0c3a4fd-8d54-4846-9db2-4f447a9e1237.png'
+image: '/images/daesun/daesun01.webp'
 originalLink: 'https://github.com/Julrum/ITE3068_team8'
 ---
 
@@ -23,10 +23,7 @@ originalLink: 'https://github.com/Julrum/ITE3068_team8'
 
 ### 메인 화면
 
-<ImageDescription
-  src="https://user-images.githubusercontent.com/26790365/156141867-d0c3a4fd-8d54-4846-9db2-4f447a9e1237.png"
-  alt="Main page"
->
+<ImageDescription src="/images/daesun/daesun01.webp" alt="Main page">
   헤더에는 홈화면, 선거정보, 후보정보, 뉴스, 여론조사 페이지로 갈 수 있는 버튼이
   있으며 우측에는 로그인과 회원가입을 할 수 있는 버튼이 존재합니다. 대선까지
   남은 기간이 표시가 되며 운영자가 선정한 오늘의 뉴스가 나옵니다. 아래에는
@@ -35,63 +32,48 @@ originalLink: 'https://github.com/Julrum/ITE3068_team8'
 
 #### 로그인 모달
 
-<ImageDescription
-  src="https://user-images.githubusercontent.com/26790365/156141944-7e389561-7b23-46eb-9c93-c4d3a6b3568a.png"
-  alt="Login page"
->
+<ImageDescription src="/images/daesun/daesun02.webp" alt="Login page">
   직접 제작한 모달 컴포넌트에 AWS Sign-In API를 연결하여 로그인을 지원합니다.
   모달 바깥을 클릭하여 모달을 닫을 수 있습니다.
 </ImageDescription>
 
 #### 회원가입 모달
 
-<ImageDescription
-  src="https://user-images.githubusercontent.com/26790365/156142020-ed2d41f3-2e71-450c-9de9-cdf979781655.png"
-  alt="Signup page"
->
+<ImageDescription src="/images/daesun/daesun03.webp" alt="Signup page">
   로그인 모달 위에 회원가입 모달을 띄워 회원가입을 안내합니다. 역시 AWS SignUp
   API를 연결하여 정상적으로 회원가입을 할 수 있습니다.
 </ImageDescription>
 
 ### 로그인 시
 
-<ImageDescription
-  src="https://user-images.githubusercontent.com/26790365/156145301-2d5de2a2-6ab5-4b30-b80d-90cfb52f28fa.png"
-  alt="Login page"
->
+<ImageDescription src="/images/daesun/daesun04.webp" alt="Login page">
   상단바에 읽기 목록을 볼 수 있는 버튼과 로그아웃 버튼이 생성됩니다.
 </ImageDescription>
 
 ### 읽기목록 페이지
 
-<ImageDescription
-  src="https://user-images.githubusercontent.com/26790365/156145451-3e3d8248-43a3-45e7-9583-6465198245fd.png"
-  alt="Reading list"
->
+<ImageDescription src="/images/daesun/daesun05.webp" alt="Reading list">
   하트를 눌러 북마크한 기사를 모아 볼 수 있습니다. 다시 하트를 누르면 북마크에서
   지울 수 있습니다.
 </ImageDescription>
 
 ### 선거정보 페이지
 
-<ImageDescription
-  src="https://user-images.githubusercontent.com/26790365/156144470-d4fee0f2-14b1-47b4-872e-a80d2231e917.png"
-  alt="Election inform page"
->
+<ImageDescription src="/images/daesun/daesun06.webp" alt="Election inform page">
   이번 대선에 대한 소개 글과 참고하면 좋을 자료를 보여줍니다.
 </ImageDescription>
 
 ### 후보정보 페이지
 
 <ImageDescription
-  src="https://user-images.githubusercontent.com/26790365/156144638-4d14183a-babf-4f92-a8a8-42d95d4a60e2.png"
+  src="/images/daesun/daesun07.webp"
   alt="Candidate inform page"
 >
   주요 후보의 리스트를 표시합니다.
 </ImageDescription>
 
 <ImageDescription
-  src="https://user-images.githubusercontent.com/26790365/156144704-082f0b21-c3d7-43ed-8592-e273fa03f530.png"
+  src="/images/daesun/daesun08.webp"
   alt="Candidate inform page"
 >
   마우스 호버시 애니메이션과 함께 후보의 사진이 강조됩니다. 클릭 시 후보의
@@ -101,7 +83,7 @@ originalLink: 'https://github.com/Julrum/ITE3068_team8'
 ### 후보 상세정보 페이지
 
 <ImageDescription
-  src="https://user-images.githubusercontent.com/26790365/156146025-b7d6de78-f691-4fdc-b3c2-0c8ed476c7be.png"
+  src="/images/daesun/daesun09.webp"
   alt="Candidate detail page"
 >
   후보의 약력 및 대표 공약 등 후보의 상세 정보를 적어놓았으며 대표 공약을 보기
@@ -109,7 +91,7 @@ originalLink: 'https://github.com/Julrum/ITE3068_team8'
 </ImageDescription>
 
 <ImageDescription
-  src="https://user-images.githubusercontent.com/26790365/156144854-bb055482-28f4-4d36-bd22-4f974b78a996.png"
+  src="/images/daesun/daesun10.webp"
   alt="Candidate detail page"
 >
   후보의 약력 및에 상세 정보 버튼을 누르면 후보의 상세한 정보가 나옵니다.
@@ -117,19 +99,13 @@ originalLink: 'https://github.com/Julrum/ITE3068_team8'
 
 ### 선거뉴스 페이지
 
-<ImageDescription
-  src="https://user-images.githubusercontent.com/26790365/156145155-8c19a62c-ec58-4030-b743-fa31d0e60928.png"
-  alt="Election news page"
->
+<ImageDescription src="/images/daesun/daesun11.webp" alt="Election news page">
   네이버 뉴스 API를 이용하여 뉴스를 가져오고 있으며 뉴스의 링크에 있는 opengraph
   메타데이터를 통해 해당 기사의 썸네일, 제목, 요약, 신문사 등 정보를 가져와
   컴포넌트에 알맞게 나타내어 줍니다.
 </ImageDescription>
 
-<ImageDescription
-  src="https://user-images.githubusercontent.com/26790365/156145185-40cf045f-c6db-465d-80f7-1857f359e96c.png"
-  alt="Election news page"
->
+<ImageDescription src="/images/daesun/daesun12.webp" alt="Election news page">
   왼쪽 사이드바에 있는 키워드를 클릭하면 해당 키워드와 연관된 뉴스 기사가 필터링
   되어 나타납니다. 또한 뉴스 컴포넌트 우하단의 하트 아이콘을 클릭하면 북마크가
   되어 읽기 목록에서 모아 다시 볼 수 있습니다.
@@ -137,10 +113,7 @@ originalLink: 'https://github.com/Julrum/ITE3068_team8'
 
 ### 여론조사 페이지
 
-<ImageDescription
-  src="https://user-images.githubusercontent.com/26790365/156145379-18f813f8-7e4d-4b29-9463-3822f76bb1cd.png"
-  alt="Election poll page"
->
+<ImageDescription src="/images/daesun/daesun13.webp" alt="Election poll page">
   react chart 라이브러리를 이용하여 다양한 여론 조사 정보를 보기 쉽게 나타내어
   줍니다.
 </ImageDescription>
