--- a/posts/next-blog.mdx
+++ b/posts/next-blog.mdx
@@ -2,7 +2,7 @@
 title: Next.JS Blog
 description: Next.JS로 제작한 MDX 블로그
 date: '2022-03-05'
-image: 'https://user-images.githubusercontent.com/26790365/156870889-d2bb48ea-6c75-4a61-8a50-bd6cdb3c0b61.png'
+image: '/images/blog/blog01.webp'
 ---
 
 Next.JS로 제작한 MDX 블로그
@@ -19,27 +19,18 @@ Next.JS
 
 ### 메인 화면
 
-<ImageDescription
-  src="https://user-images.githubusercontent.com/26790365/156870889-d2bb48ea-6c75-4a61-8a50-bd6cdb3c0b61.png"
-  alt="Main page"
->
+<ImageDescription src="/images/blog/blog01.webp" alt="Main page">
   현재 올라와 있는 포스트들의 썸네일, 제목, 설명, 작성시간이 보여집니다.
 </ImageDescription>
 
 ### 포스트 페이지
 
-<ImageDescription
-  src="https://user-images.githubusercontent.com/26790365/169682884-f30f3f2a-a679-4683-9eba-022a0c31e583.png"
-  alt="Post page"
->
+<ImageDescription src="/images/blog/blog02.webp" alt="Post page">
   포스트의 제목, 설명, 작성날짜 등이 헤더에 알맞게 파싱되어 나타납니다.
 </ImageDescription>
 
 ### 자기소개 페이지
 
-<ImageDescription
-  src="https://user-images.githubusercontent.com/26790365/169682913-69f6cf86-1877-4f78-afda-1d41f82f0a55.png"
-  alt="About page"
->
+<ImageDescription src="/images/blog/blog03.webp" alt="About page">
   커스텀 컴포넌트를 이용하여 데이터들을 보여줍니다.
 </ImageDescription>
