--- a/posts/onelinebank.mdx
+++ b/posts/onelinebank.mdx
@@ -2,7 +2,7 @@
 title: OnelineBank
 description: 2021 우리은행 온(On)택트 해커톤 본선대회 출품작
 date: '2021-06-05'
-image: 'https://user-images.githubusercontent.com/26790365/147754199-2f7c9e85-8ccb-4771-b0f0-5f05ace0a28f.png'
+image: '/images/bank/bank01.webp'
 ---
 
 2021 우리은행 온(On)택트 해커톤 본선대회 출품작
@@ -22,23 +22,17 @@ React Native, Google Firebase
 
 ### 스플래쉬 화면
 
-<ImageDescription src="https://user-images.githubusercontent.com/26790365/147754188-c853857c-8437-4a9d-b303-1fc5b2ecaebd.png" alt="Splash page">
+<ImageDescription src='/images/bank/bank01.webp' alt="Splash page">
 
 </ImageDescription>
 
 ### 로그인
 
-<ImageDescription
-  src="https://user-images.githubusercontent.com/26790365/147754195-79e96cc7-329a-460e-abc0-7ec38180c106.png"
-  alt="Login page"
-/>
+<ImageDescription src="/images/bank/bank02.webp" alt="Login page" />
 
 ### 채팅
 
-<ImageDescription
-  src="https://user-images.githubusercontent.com/26790365/147754199-2f7c9e85-8ccb-4771-b0f0-5f05ace0a28f.png"
-  alt="Chatting page"
->
+<ImageDescription src="/images/bank/bank03.webp" alt="Chatting page">
   채팅 텍스트를 분석하여 은행과 계좌번호 및 금액을 인식하고 인식이 제대로
   되었는지 한 번 더 확인하는 과정을 거친 뒤 '네'와 같은 긍정의 답변이 입력되면
   개인 인증(Touch ID, Face ID 등) 후 우리은행 송금 API를 이용하여 송금한다.
@@ -46,10 +40,7 @@ React Native, Google Firebase
 
 ### 주소록
 
-<ImageDescription
-  src="https://user-images.githubusercontent.com/26790365/147754201-7f905f01-14ac-4149-ac7c-dcdbf21e2b5b.png"
-  alt="Contact page"
->
+<ImageDescription src="/images/bank/bank04.webp" alt="Contact page">
   주소록 화면에는 친구나 가족처럼 자주 보내는 계좌를 미리 등록하여 채팅 화면에서
   이름으로 접근하여 빠르게 송금할 수 있다. 상단의 + 버튼을 통해 새로운 계좌를
   등록할 수 있다.
@@ -57,18 +48,12 @@ React Native, Google Firebase
 
 ### 계좌추가
 
-<ImageDescription
-  src="https://user-images.githubusercontent.com/26790365/147754206-0109389a-34f4-4783-9605-68ab6e384157.png"
-  alt="Account add page"
->
+<ImageDescription src="/images/bank/bank05.webp" alt="Account add page">
   예금자명과 은행, 계좌번호르 입력 후 등록할 수 있다.
 </ImageDescription>
 
 ### 사용자 정보
 
-<ImageDescription
-  src="https://user-images.githubusercontent.com/26790365/147754209-9a323401-131f-4fac-94a6-a680f64e0ff9.png"
-  alt="Account page"
->
+<ImageDescription src="/images/bank/bank06.webp" alt="Account page">
   사용자에 대한 간략한 정보를 볼 수 있으며 로그아웃을 할 수 있다.
 </ImageDescription>
