refactor: Remove unnessary file and change global style

--- a/posts/daesun.mdx
+++ b/posts/daesun.mdx
@@ -8,9 +8,9 @@ originalLink: 'https://github.com/Julrum/ITE3068_team8'
 
 ## 프로젝트 소개
 
-대선 관련 뉴스 및 정보를 한 곳에서 모아 보여주면 좋겠다는 생각에 시작한 프로젝트입니다.
-선거 일정 및 선거 정보, 후보 정보, 선거 뉴스, 여론 조사 정보가 제공이 됩니다.
-선거 뉴스의 경우 네이버 뉴스 API를 이용하여 가져오며 후보자별 필터링 기능이 제공됩니다.
+대선 관련 뉴스 및 정보를 한 곳에서 모아 보여주면 좋겠다는 생각에 시작한 프로젝트입니다.<br />
+선거 일정 및 선거 정보, 후보 정보, 선거 뉴스, 여론 조사 정보가 제공이 됩니다.<br />
+선거 뉴스의 경우 네이버 뉴스 API를 이용하여 가져오며 후보자별 필터링 기능이 제공됩니다.<br />
 또한 로그인을 하면 마음에 드는 기사를 북마크하여 한 곳에 모아볼 수 있게 만들었습니다.
 
 ### 사용한 기술 스택
