--- a/posts/daesun.mdx
+++ b/posts/daesun.mdx
@@ -118,13 +118,30 @@ originalLink: 'https://github.com/Julrum/ITE3068_team8'
   줍니다.
 </ImageDescription>
 
-## 배운 점
+### 담당 역할
 
-이번 프로젝트에서 처음으로 Amplify, Lambda 등 AWS 주요 서비스를 적용해 보았습니다.
-북마크한 기사를 저장하는 기능을 GraphQL을 이용하여 개발하는 경험을 해보았습니다.
-또한 처음으로 팀장을 맡아 프로젝트 초반 세팅, 커밋 컨벤션 등 규칙을 정하고 일정을 조율하고 종합하는 소중한 경험을 해볼 수 있었습니다.
+- **Global**
+  - 팀장을 맡아 프로젝트 초반 세팅, 커밋 컨벤션 등 규칙을 정하고 일정을 조율하고 종합하였습니다.
+  - Amplify, Lambda 등 AWS 주요 서비스를 적용해 보았습니다.
+  - AWS Sign-In API를 연결하여 로그인기능을 구현하였습니다.
+  - GraphQL로 북마크한 기사를 저장하는 기능을 구현하였습니다.
+- **Page**
+  - 메인 화면, 선거 정보 화면, 선거 뉴스 페이지를 제작하였습니다.
+  - 네이버 뉴스 API와 opengraph 메타데이터를 이용하여 실제 뉴스 페이지처럼 보이도록 구현하였습니다.
 
-## 아쉬운 점
+### 💬 회고
 
-학교 수업과 과제와 병행하여 진행한 프로젝트인 만큼 프로젝트에 대한 애정에 비해 적은 시간을 들일 수 밖에 없어 계획대로 다 구현하였지만
-깔끔하게 코딩을 하지 못하였고 다른 팀원의 코드 리뷰를 제대로 해주지 않아 처음에 정했던 컨벤션들이 잘 지켜지지 않아 아쉬웠습니다.
+- **팀장으로서의 역할**
+  {' '}
+  <aside>
+    👉 학교 수업과 과제와 병행하여 진행한 프로젝트인 만큼 프로젝트에 대한 애정에
+    비해 적은 시간을 들일 수 밖에 없어 계획대로 다 구현하였지만 깔끔하게 코딩을
+    하지 못하였고 다른 팀원의 코드 리뷰를 제대로 해주지 않아 처음에 정했던
+    컨벤션들이 잘 지켜지지 않아 아쉬웠습니다.
+  </aside>
+- **전반적인 AWS 서비스에 대한 이해**
+  {' '}
+  <aside>
+    👉 기존에는 Firebase나 GCP만 사용해보았으나 이번 수업을 통애 처음으로 AWS의
+    각종 서비스를 사용해볼 수 있었습니다.
+  </aside>
